GNOME Bugzilla – Bug 766271
Several memory leaks when opening archive
Last modified: 2016-09-15 05:24:13 UTC
Valgrind reports several memory leaks when opening an archive.
Created attachment 327640 [details] [review] file list memory leak fix
Created attachment 327641 [details] [review] file content type leak fix
Created attachment 327642 [details] [review] clipboard paste leak fix
Created attachment 327643 [details] [review] another clipboard paste leak fix
Created attachment 327644 [details] [review] add files dialog leak fix
all patches pushed to master, thank you.