Fix a memory leak in the file list

==15644== 27 bytes in 1 blocks are definitely lost in loss record 5,387 of 23,077
==15644==    at 0x4C2DB9D: malloc (vg_replace_malloc.c:299)
==15644==    by 0x73FD038: g_malloc (gmem.c:94)
==15644==    by 0x741520E: g_strdup (gstrfuncs.c:363)
==15644==    by 0x6E818D8: g_content_type_get_description (gcontenttype.c:362)
==15644==    by 0x440170: fr_window_populate_file_list (fr-window.c:1612)
==15644==    by 0x440170: fr_window_update_file_list (fr-window.c:1950)
==15644==    by 0x442F94: fr_window_go_to_location (fr-window.c:7221)
==15644==    by 0x447B38: _archive_operation_completed (fr-window.c:3162)
==15644==    by 0x4485BB: archive_list_ready_cb (fr-window.c:6028)
==15644==    by 0x6E50D09: g_simple_async_result_complete (gsimpleasyncresult.c:801)
==15644==    by 0x6E50D88: complete_in_idle_cb_for_thread (gsimpleasyncresult.c:872)
==15644==    by 0x73F7AED: g_main_dispatch (gmain.c:3154)
==15644==    by 0x73F7AED: g_main_context_dispatch (gmain.c:3769)
==15644==    by 0x73F7E67: g_main_context_iterate.isra.29 (gmain.c:3840)
==15644==    by 0x73F7F0B: g_main_context_iteration (gmain.c:3901)
==15644==    by 0x6E86D3C: g_application_run (gapplication.c:2381)
==15644==    by 0x414FB5: main (main.c:38)

https://bugzilla.gnome.org/show_bug.cgi?id=766271